Passwords/VaultWarden/templates/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: passwords-ingress

  labels:
    wan-mode: 'public'
    lan-mode: 'private'

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: core-prod
      name: main-gw
      sectionName: https

  hostnames:
    - 'passwords.mylogin.space'
  rules:
    - backendRefs:
        - name: dc1-k3s-node1-business-passwords-vaultwarden
          port: 80
